# mlops_pet_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/matchers/: black.json  mypy.json
.github/workflows/: lint.yml  tests.yml
cloudformation/: app.py  deploy-stack.sh
cloudformation/mlflow_container/: Dockerfile
cloudformation/prefect_container/: Dockerfile
mlops_pet/: __main__.py  definitions.py
mlops_pet/cli/: __init__.py  cli.py
mlops_pet/deployment/: lambda_function.py
mlops_pet/deployment/model/: __init__.py  kinesis.py  main.py  service.py  utils.py
mlops_pet/pipelines/: __init__.py
mlops_pet/pipelines/register/: register_flow.py
mlops_pet/pipelines/training/: training_flow.py
mlops_pet/pipelines/training/tasks/: __init__.py  preprocess_data.py  split.py  train_model.py
notebooks/: base_eda.ipynb
tests/integration/: .env  docker-compose.yml  event.json  run.sh
tests/integration/mlflow/: Dockerfile
tests/integration/scripts/: test_infrastructure.py  test_lambda.py
tests/resources/: data.b64
tests/unit/deployment/model/: test_utils.py
